--- a/app/src/main/res/values/leaf_back.xml
+++ b/app/src/main/res/values/leaf_back.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="leaf_back">#26A69A</color>
-</resources>
+<resources></resources>
